Import of JJNAPIORK/DBIx-Class-Migration-0.002 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.002
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.002.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for DBIx-Class-Migration
 
+0.002   24 February 2012
+        - fixed some POD issues with the first release
+
 0.001   24 February 2012
         - initial release with all features complete
