--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for DBIx-Class-Migration
 
+0.006   28 February 2012
+        - let you dump fixtures from an unversioned DB, but warn about it.
+        - FAQ entry about this
+
 0.005   27 February 2012
         - solved a problem when the msql socket path can exceed 104 characters
         - make use of existing Test::mysqld methods instead of guessing
