--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for DBIx-Class-Migration
 
+0.010   02 March 2012
+        - The mysql sandbox no longer uses TCP networking.  This should make it
+          possible to run parallel tests and have more than one user sharing a
+          single development server.
+        - Avoid infinite recursive when I can't infer the schema class (this
+          fixes regression introduced in previous version).
+
 0.009   01 March 2012
         - changed the way we look for a schema so that commands that don't need
           one (like help and version) can still run.
