Import of JJNAPIORK/DBIx-Class-Migration-0.012 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.012
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.012.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for DBIx-Class-Migration
 
+0.012   05 March 2012
+        - Upped Pod::Parser dependency version to close some reported test
+          failures.
+        - Documentation tweaks
+
 0.011   04 March 2012
         - Added a bit to the FAQ regarding the extra warnings to STDOUT/ERR.
         - specify more modern version of some dependencies, since I am using the
