Import of JJNAPIORK/DBIx-Class-Migration-0.014 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.014
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.014.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for DBIx-Class-Migration
 
+0.014   07 March 2012
+        - Changed the way we depend on File::ShareDir::ProjectDistDir
+
 0.013   05 March 2012
         - upped DBIC:DH dependency version to take advantage of required
           fixes and overall improvements
