--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 
 
 This archive contains the distribution DBIx-Class-Migration,
-version 0.017:
+version 0.018:
 
-  Make it easy to migrate DBIC based databases
+  Tools to make migrating your DBIx::Class databases easier
 
 This software is copyright (c) 2012 by John Napiorkowski.
 
