Import of JJNAPIORK/DBIx-Class-Migration-0.019 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.019
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.019.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for DBIx-Class-Migration
 
+0.019  16 March 2012
+        - Fixed broken POD in the third part of the tutorial that prevented
+          the page from being rendered.
+        - Updated a number of dependencies to newer version to solve some
+          reported problems.
+
 0.018  15 March 2012
         - Documentation fixes (Volker++)
         - Project title change
