Import of JJNAPIORK/DBIx-Class-Migration-0.023 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.023
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.023.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for DBIx-Class-Migration
 
+0.023  03 May 2012
+        - Look harder for a sharedir
+
 0.022  11 April 2012
         - Fixed broken POD in last release.  No functional changes
 
