Import of JJNAPIORK/DBIx-Class-Migration-0.024 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.024
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.024.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for DBIx-Class-Migration
 
+0.024  05 June 2012
+        - Fixed method 'install_version_storage' to actually do what the
+          documentation claims.  Added test case (++bentglasstube).
+
 0.023  03 May 2012
         - Look harder for a sharedir
 
