--- a/lib/DBIx/Class/Migration/FAQ.pod
+++ b/lib/DBIx/Class/Migration/FAQ.pod
@@ -288,18 +288,24 @@ If there have been new contributors, be sure to give credit
 
     pod2markdown < lib/DBIx/Class/Migration.pm > README.mkdn
 
-This will make sure the C<README> file in the project root matches the most
+This will make sure the C<README.mkdn> file in the project root matches the most
 recent updates.
 
 =item Check your tests
 
-    prove -lvr t
+    AUTHOR_MODE=1 prove -lvr t
 
 =item Update the repository
 
     git add @stuff_to_add
     git commit -m $message
     git push
+
+=item Make the Distribution
+
+    dzil build
+    dzil release
+    dzil clean
 
 =item Update the git version tag
 
